# Verity

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.full  README.md  docker-compose.yml  pyproject.toml
src/free_search_mcp/: __init__.py  extractor.py  server.py
tests/: test_search.py
